--- a/view/index.html
+++ b/view/index.html
@@ -4,10 +4,19 @@
 	<title>Doc</title>
     <script type="text/javascript" src="/eel.js"></script>
     <script type="text/javascript" src="./main.js"></script>
-	<style>
-	</style>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="cp_ipselect cp_sl01" id="form">
+		<select id="port_select">
+			<option value="" hidden>Choose</option>
+			<option value="1">cat</option>
+			<option value="2">dog</option>
+			<option value="3">rabbit</option>
+			<option value="4">squirrel</option>
+		</select>
+		<a href="" id="button" class="btn btn--orange">決定</a>
+	</div>
 	<div id="text">
 	</div>
 </body>
